Added basic html layout, css styles, and button function

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <main id="wrapper">
-        <h1>Random Quote Generator</h1>
         <div class="container">
-            <p id="quote"></p>
-            <p id="author"></p>
+            <h1>Random Quote Generator</h1>
+            <br>
+            <span>Quote:</span>
+            <div id="text"></div>
+            <br>
+            <span>Author</span>
+            <div id="author"></div>
+            <br>
+            <button id="button">Reload</button>
         </div>
     </main>
     <script src="js/app.js"></script>
