Revised html layout, and css styles

--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         <div class="container">
             <h1>Random Quote Generator</h1>
             <br>
-            <span>Quote:</span>
-            <div id="text"></div>
-            <br>
-            <span>Author</span>
-            <div id="author"></div>
+            <div id="output"></div>
             <br>
             <button id="button">Reload</button>
         </div>
