Completed revision of html, css, and completed js functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <br>
             <div id="output"></div>
             <br>
-            <button id="button">Reload</button>
+            <div class="button">
+                <button id="button">Reload</button>
+            </div>
         </div>
     </main>
     <script src="js/app.js"></script>
